<resources>
    <string name="app_name">Servi-Envía</string>
    <string name="url_api">http://servicioenvios.azurewebsites.net/Service.svc/</string>
    <string name="envio">Enviados</string>
    <string name="registro">Registrar Envio</string>
    <string name="cliente">Clientes</string>
    <string name="cedula">Cedula</string>
    <string name="Estado">Estado</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_nac">Fecha nacimiento AAAA-MM-DD</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Telefono</string>
    <string name="email">Correo electronico</string>
    <string name="ERROR_CONEXION">Sin conexión</string>
    <string name="ERROR_RESPONSE">Error de respuesta</string>
    <string name="cedulaemisor">Cedula emisor</string>
    <string name="ceduladestinatario">Cedula destinatario</string>
    <string name="nombreemisor">Nombre emisor</string>
    <string name="nombredestinatario">Nombre destinatario</string>
    <string name="ciudad_de_origen">Ciudad de origen:</string>
    <string name="pesokilos">Peso en kilos</string>
    <string name="valorseguro">Valor a asegurar</string>
    <string name="valortotal">Valor envio</string>
    <string name="ciudad_de_destino">Ciudad de destino</string>
    <string name="numeroguia">Numero Guia</string>
    <string name="pendiente">Pendiente</string>
    <string name="entregado">Entregado</string>
    <string name="enviado">Enviado</string>
    <string name="recolectado">Recolectado</string>
    <string name="emisor">Emisor</string>
    <string name="destino">Receptor</string>
    <string name="todo">TODO</string>
</resources>
