<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.66"
        android:orientation="horizontal"
        />

    <ImageView
        android:id="@+id/btnEnvio"
        android:layout_width="0dp"
        android:src="@drawable/envio"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl1"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/btnEnvio"
        app:layout_constraintStart_toStartOf="@id/btnEnvio"
        app:layout_constraintEnd_toEndOf="@id/btnEnvio"
        android:text="@string/envio"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_24"
        android:padding="@dimen/dimen_8"
        android:background="@drawable/black_gradient"
        />

    <ImageView
        android:id="@+id/btnRegistro"
        android:onClick="irRegistro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl2"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/btnRegistro"
        app:layout_constraintStart_toStartOf="@id/btnRegistro"
        app:layout_constraintEnd_toEndOf="@id/btnRegistro"
        android:text="@string/registro"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_24"
        android:padding="@dimen/dimen_8"
        android:background="@drawable/black_gradient"
        />

    <ImageView
        android:id="@+id/btnCliente"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:onClick="irClientes"
        android:scaleType="centerCrop"
        android:src="@drawable/client"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl2"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="@id/btnCliente"
        app:layout_constraintStart_toStartOf="@id/btnCliente"
        app:layout_constraintEnd_toEndOf="@id/btnCliente"
        android:text="@string/cliente"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_24"
        android:padding="@dimen/dimen_8"
        android:background="@drawable/black_gradient"
        />

</androidx.constraintlayout.widget.ConstraintLayout>